Bảng Phụ liệu - Done

--- a/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/index.html
+++ b/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/index.html
@@ -255,7 +255,7 @@
             <ul class="collapsible collapsible-sub" data-collapsible="accordion">
               <li><a href="app-invoice-list.html"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice List">Thêm Phụ Liệu</span></a>
               </li>
-              <li><a href="app-invoice-view.html"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">Xem Phụ Liệu</span></a>
+              <li><a href="xemphulieu.html"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">Xem Phụ Liệu</span></a>
               </li>
             </ul>
           </div>
