Bảng Kho - view

--- a/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/index.html
+++ b/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/index.html
@@ -260,6 +260,18 @@
             </ul>
           </div>
         </li>
+        <li class="bold"><a class="collapsible-header waves-effect waves-cyan " href="JavaScript:void(0)"><i class="material-icons">receipt</i><span class="menu-title" data-i18n="Invoice">Danh sách Kho</span></a>
+          <div class="collapsible-body">
+            <ul class="collapsible collapsible-sub" data-collapsible="accordion">
+              <li><a href="khophulieu.html"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice List">Kho Phụ Liệu</span></a>
+              </li>
+              <li><a href="xemphulieu.html"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">Kho Nguyên Liệu</span></a>
+              </li>
+              <li><a href="xemphulieu.html"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">Kho Thành phẩm</span></a>
+              </li>
+            </ul>
+          </div>
+        </li>
         <li class="bold"><a class="collapsible-header waves-effect waves-cyan " href="JavaScript:void(0)"><i class="material-icons">add_shopping_cart</i><span class="menu-title" data-i18n="eCommerce">eCommerce</span></a>
           <div class="collapsible-body">
             <ul class="collapsible collapsible-sub" data-collapsible="accordion">
