--- a/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/form-elements.html
+++ b/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/form-elements.html
@@ -750,18 +750,18 @@
         <div class="card-title">
           <div class="row">
             <div class="col s12 m6 l10">
-              <h4 class="card-title">Icon Prefixes</h4>
+              <h4 class="card-title">Thông tin nhà cung cấp</h4>
             </div>
             <div class="col s12 m6 l2">
               <ul class="tabs">
-                <li class="tab col s6 p-0"><a class="active p-0" href="#view-icon-prefixes">View</a></li>
-                <li class="tab col s6 p-0"><a class="p-0" href="#html-icon-prefixes">Html</a></li>
+                <li class="tab col s6 p-0"><a class="active p-0" href="#view-icon-prefixes">Tổ chức</a></li>
+                <li class="tab col s6 p-0"><a class="p-0" href="#html-icon-prefixes">Cá nhân</a></li>
               </ul>
             </div>
           </div>
         </div>
         <div id="view-icon-prefixes">
-          <p>You can add an icon prefix to make the form input label even more clear. Just add an icon with the class
+          
             <code class="language-markup">prefix</code> before the input and label.</p>
           <br>
           <div class="row">
