--- a/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/form-select2.html
+++ b/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/form-select2.html
@@ -1393,7 +1393,7 @@ $(".select2-data-array").select2({
                   <h6>Default</h6>
                   <div class="input-field">
                     <select class="select2 browser-default" id="default-select">
-                      <option value="square">Square</option>
+                      <option value="2">Square</option>
                       <option value="rectangle">Rectangle</option>
                       <option value="rombo">Rombo</option>
                       <option value="romboid">Romboid</option>
