--- a/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/xemphulieu.html
+++ b/dmin_dashbaord_v20_html_css_js_bootstap5-main/assets/html/ltr/menu-template/xemphulieu.html
@@ -811,7 +811,7 @@
                     <th>Danh mục</th>
                     <th>Màu sắc</th>
                     <th>Ngày thêm</th>
-                    <th>Chỉnh sửa</th>
+                    <th>Hành động</th>
                   </tr>
                 </thead>
                 <!-- PL sắp xếp theo số thứ tự của ID-PL# -->
@@ -832,7 +832,10 @@
                       <small> Xanh dương</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
@@ -858,7 +861,10 @@
                       <small> Xanh lá</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
@@ -884,7 +890,10 @@
                       <small>Đỏ</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
@@ -910,7 +919,10 @@
                       <small>Cam</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
@@ -936,7 +948,10 @@
                       <small>Xanh trời</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
@@ -962,7 +977,10 @@
                       <small>Trắng</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
@@ -988,7 +1006,10 @@
                       <small>Đen</small></td>
                     <td><small>23-07-19</small></td>
                     <td>
-                      <div class="invoice-action">                        
+                      <div class="invoice-action">
+                        <a href="app-invoice-view.html" class="invoice-action-view mr-4">
+                          <i class="material-icons">remove_red_eye</i>
+                        </a>
                         <a href="app-invoice-edit.html" class="invoice-action-edit">
                           <i class="material-icons">edit</i>
                         </a>
